--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body style = "background-color:lightblue">
 
-    <a href="laserRed16.png">youtube</a>
+    <iframe width="1000" height="600"
+    src="https://www.youtube.com/watch?v=dQw4w9WgXcQ&autoplay=1">
+    </iframe>
 
 
 
